@@ -43,6 +43,7 @@ kotlin {
             implementation(projects.biz.home)
         }
         desktopMain.dependencies {
+            implementation("dev.datlag:kcef:2025.03.23")
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutines.swing)
         }
@@ -82,6 +83,16 @@ dependencies {
 
 compose.desktop {
     application {
+        buildTypes.release.proguard {
+            configurationFiles.from("compose-desktop.pro")
+        }
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        }
         mainClass = "top.sacz.bili.MainKt"
 
         nativeDistributions {
@@ -93,4 +104,5 @@ compose.desktop {
             }
         }
     }
+
 }
